--- a/server/clickJacking.html
+++ b/server/clickJacking.html
@@ -7,4 +7,11 @@
   <body style="background-color: red;">
     目标网站
   </body>
+  <script>
+    // 部分浏览器支持
+    if (window.top !== window.self) {
+      // 当前窗口被嵌入到其他窗口中，可能是点击劫持
+      window.top.location = window.self.location;
+    }
+  </script>
 </html>
